Stats: fix Average icon alignment

--- a/client/my-sites/stats/stats-module/style.scss
+++ b/client/my-sites/stats/stats-module/style.scss
@@ -474,7 +474,7 @@ ul.module-header-actions {
 		}
 
 		.gridicon {
-			margin: 0 0 -4px -3px;
+			margin-bottom: -4px;
 			width: 15px;
 		}
 	}
